--- a/Kinovea.ScreenManager/Properties/Capture.resx
+++ b/Kinovea.ScreenManager/Properties/Capture.resx
@@ -378,4 +378,7 @@
   <data name="contact2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\contact2-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="id3_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\id3-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
