--- a/Kinovea.ScreenManager/Properties/Capture.resx
+++ b/Kinovea.ScreenManager/Properties/Capture.resx
@@ -375,4 +375,7 @@
   <data name="close_capture" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close-capture.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="contact2_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\contact2-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
